# tsvhold

./: LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: index.html
make/: jacobus_sort.txt
src/tsvhold/: __init__.py
src/tsvhold/core/: TSVHolder.py
tests/: test_0.py  test_1984.py
