[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "datahold>=3.0,<4",
    "setdoc>=1.3,<2",
]
description = "..."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "tsvhold"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.1.2"

[project.urls]
Download = "https://pypi.org/project/tsvhold/#files"
Index = "https://pypi.org/project/tsvhold/"
Source = "https://github.com/johannes-programming/tsvhold/"
Website = "https://tsvhold.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
